--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -9,6 +9,7 @@
   <title>TinyApp</title>
 </head>
 <body>
+  <%- include('partials/_header') %>
   <main style="margin: 1em;">
     <h3>My URLs</h3>
     <a href="https://www.google.com"> Shorten your URL here</a>
