added redirects to go to our create new url page at the /urls and landing page after creating a new link

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -12,7 +12,7 @@
   <%- include('partials/_header') %>
   <main style="margin: 1em;">
     <h3>My URLs</h3>
-    <a href="https://www.google.com"> Shorten your URL here</a>
+    <a href="/urls/new"> Shorten your URL here</a>
     <table class="table">
       <thead>
         <tr>
