--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -13,7 +13,7 @@
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-        <a href="https://www.google.com"> Add a new URL here</a>
+        <a href="/urls/new"> Add a new URL here</a>
       </div>
     <div class="card-footer text-muted"></div>
   </div>
