--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -18,7 +18,8 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
-          <th scope="col">Delete</th>
+          <th scope="col">Edit URL</th>
+          <th scope="col">Delete URL</th>
         </tr>
       </thead>
       <tbody>
@@ -26,6 +27,11 @@
           <tr>
             <td><%= url %></td>
             <td><%= urls[url] %></td>
+            <td><form method="GET" action="/urls/<%= url %>">
+              <div class="form-group mb-2">
+                <button type="submit" class="btn btn-primary">EDIT URL</button>
+              </div>
+            </form></td>
             <td><form method="POST" action="/urls/<%= url %>/delete">
               <div class="form-group mb-2">
                 <button type="submit" class="btn btn-primary">DELETE URL</button>
