--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -14,6 +14,16 @@
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
         <a href="/urls/new"> Add a new URL here</a>
+
+        <form class="form-inline" method="POST" action="/urls/<%= shortURL %>"> 
+          <div class="form-group mb-2>
+            <label for="longURL">Enter updated long URL:</label>
+            <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+
+
       </div>
     <div class="card-footer text-muted"></div>
   </div>
