--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -7,7 +7,28 @@
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>      
+        <% if (username){ %>
+          <p> <%= username %> </p>
+          <form class="form-inline" method="POST" action="/logout"> 
+           
+              <button type="submit" class="btn btn-primary">Log Out</button>
+           
+          </form>    
+
+        <%} else { %>
+          <form class="form-inline" method="POST" action="/login"> 
+            <div class="form-group mb-2>
+              <label for="username">Enter username:</label>
+              <input class="form-control" type="text" name="username" style="width: 300px; margin: 1em;">
+              <button type="submit" class="btn btn-primary">Login</button>
+            </div>
+          </form>
+        <%}%>
+
+        
+
+
       </div>
     </div>
   </nav>
