updated header to include username when looged in and sign in button if logged out

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,8 +8,8 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>      
-        <% if (username){ %>
-          <p> <%= username %> </p>
+        <% if (user.email){ %>
+          <p> <%= user.email %> </p>
           <form class="form-inline" method="POST" action="/logout"> 
            
               <button type="submit" class="btn btn-primary">Log Out</button>
@@ -19,13 +19,12 @@
         <%} else { %>
           <form class="form-inline" method="POST" action="/login"> 
             <div class="form-group mb-2>
-              <label for="username">Enter username:</label>
+              <label for="username">Enter email:</label>
               <input class="form-control" type="text" name="username" style="width: 300px; margin: 1em;">
               <button type="submit" class="btn btn-primary">Login</button>
             </div>
           </form>
         <%}%>
-
         
 
 
