fixed bug to display user email after logging in

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,7 +8,7 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>      
-        <% if (user.email){ %>
+        <% if (user){ %>
           <p> <%= user.email %> </p>
           <form class="form-inline" method="POST" action="/logout"> 
            
@@ -25,6 +25,8 @@
             </div>
           </form>
         <%}%>
+
+
         
 
 
