--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -8,9 +8,8 @@
 <body>
   <form class="form-inline" action="/register" method="POST">
     <div class="form-group mb-2">
-      <label for="email">Register an email address:</label>
+      <label for="email">Email address:</label>
       <input class="form-control" type="email" name="email" placeholder="your email" style="width: 300px; margin: 1em">
-      <button type="submit" class="btn btn-primary">Submit</button>
     </div>
     
     <div class="form-group mb-2">
