--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,11 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registration Page</title>
+  <title>Login</title>
 </head>
 <body>
-  <h2>Register here:</h2>
-  <form class="form-inline" action="/register" method="POST">
+  <h1>Login Page</h1>
+  <form class="form-inline" action="/login" method="POST">
     <div class="form-group mb-2">
       <label for="email">Email address:</label>
       <input class="form-control" type="email" name="email" placeholder="your email" style="width: 300px; margin: 1em">
@@ -15,9 +15,9 @@
     
     <div class="form-group mb-2">
     
-      <label for="password">Enter a password:</label>
+      <label for="password">Enter password:</label>
       <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <button type="submit" class="btn btn-primary">Login</button>
     </div>
   </form>  
 </body>
