--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,9 +16,12 @@
     <div class="form-group mb-2">
     
       <label for="password">Enter password:</label>
-      <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
+      <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em" placeholder="your password">
       <button type="submit" class="btn btn-primary">Login</button>
     </div>
+
+    <p2> To register an account, click <a href="/register">here</a></p2>
+    
   </form>  
 </body>
 </html>
