--- a/views/registration.ejs
+++ b/views/registration.ejs
@@ -16,8 +16,8 @@
     <div class="form-group mb-2">
     
       <label for="password">Enter a password:</label>
-      <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em">
-      <button type="submit" class="btn btn-primary">Submit</button>
+      <input class="form-control" type="password" name="password" placeholder="password" style="width: 300px; margin: 1em">
+      <button type="submit" class="btn btn-primary">Register</button>
     </div>
   </form>  
 </body>
