--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -11,14 +11,14 @@
   <div class="card text-center">
       <div class="card-header"></div>
       <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+        <h5 class="card-title">TinyURL for: <a href="/u/<%= shortURL %>"><%= longURL %></a></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-        <a href="/urls/new"> Add a new URL here</a>
+        <a href="/urls/new"> Click to add a new URL or update this URL below. </a>
 
-        <form class="form-inline" method="POST" action="/urls/<%= shortURL %>"> 
+        <form class="form-inline-center" method="POST" action="/urls/<%= shortURL %>/edit"> 
           <div class="form-group mb-2>
             <label for="longURL">Enter updated long URL:</label>
-            <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
+            <input class="form-control-center" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
         </form>
