--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -1,24 +1,21 @@
-<header>
-  <nav class="navbar navbar-expand-md navbar-dark bg-success">
-    <a class="navbar-brand" href="/urls">TinyApp</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-      <div class="navbar-nav">
-        <a class="nav-item nav-link" href="/urls">My URLs</a>
-        <a class="nav-item nav-link" href="/urls/new">Create New URL</a>     
-        <% if (user){ %>
-          <p> <%= user.email %> </p>
-          <form class="form-inline" method="POST" action="/logout">            
-            <button type="submit" class="btn btn-primary">Log Out</button>
-          </form>    
-        <%} else { %>
-          <a class="nav-item nav-link" href="/login">Login</a>
-          <a class="nav-item nav-link" href="/register">Register</a>    
-        <%}%>      
-      </div>
-    </div>
-  </nav>
-</header>
-
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <a class="navbar-brand" href="/urls">TinyApp</a>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">    
+      <a class="nav-item nav-link" href="/urls">My URLs</a>
+      <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+    </ul>
+    <% if (user){ %>
+      <h class="text-white bg-dark"> <%= user.email %> </h>
+      <form class="form-inline" method="POST" action="/logout">            
+        <button type="submit" class="btn btn-primary">Log Out</button>
+      </form>    
+    <%} else { %>
+      <a class="nav-item nav-link" href="/login">Login</a>
+      <a class="nav-item nav-link" href="/register">Register</a>    
+    <%}%>      
+  </div>
+</nav>
