--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -17,7 +17,7 @@
 
         <form class="form-inline-center" method="POST" action="/urls/<%= shortURL %>/edit"> 
           <div class="form-group mb-2>
-            <label for="longURL">Enter updated long URL:</label>
+            <label for="longURL">Update your TinyURL here:</label>
             <input class="form-control-center" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
             <button type="submit" class="btn btn-primary">Submit</button>
           </div>
